# rust-web3

./: .editorconfig  .gitignore  .travis.yml  .typos.toml  Cargo.toml  LICENSE  README.md  build.rs  config.toml  deny.toml  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: deny.yml  lint.yml  rust.yml  typo.yml
examples/: batch.rs  bench.rs  contract.rs  contract_ens.rs  contract_log_filter.rs  contract_log_filter_loss_connection.rs  contract_log_pubsub.rs  contract_storage.rs  contract_token.code  either_transport.rs  http.rs  ipc.rs  pubsub.rs  readme.md  simple.rs  simple_ipc.rs  simple_log_filter.rs  simple_log_sub.rs  simple_storage.rs  simple_ws.rs  transaction_private.rs  transaction_public.rs  transport_batch.rs  transport_either.rs  transport_http.rs  transport_ws.rs  transport_ws_loss_connection.rs
examples/contracts/: SimpleStorage.sol
examples/res/: ENSRegistry.code  PublicResolver.code  SimpleEvent.abi
findora/: Cargo.toml
findora/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/futures_core/stream/: trait.Stream.js
implementors/pin_project/__private/: trait.PinnedDrop.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/web3/: trait.Transport.js
src/: confirm.rs  error.rs  helpers.rs  lib.rs  signing.rs  types.rs
src/api/: accounts.rs  eth.rs  eth_ens.rs  eth_filter.rs  eth_subscribe.rs  mod.rs  net.rs  parity.rs  parity_accounts.rs  parity_set.rs  personal.rs  traces.rs  txpool.rs  web3.rs
src/contract/: contract.rs  deploy.rs  error.rs  helpers.rs  macro.rs  mod.rs  output.rs  result.rs  tokens.rs
src/contract/ens/: eth_ens.rs  mod.rs  public_resolver.rs  registry.rs  reverse_resolver.rs
src/contract/res/: ENSRegistry.json  MyLibrary.json  PublicResolver.json  token.json
src/transports/: batch.rs  eip_1193.rs  either.rs  http.rs  ipc.rs  mod.rs  shared.rs  test.rs  ws.rs
src/types/: block.rs  block_id.rs  bytes.rs  bytes_array.rs  example-trace-str.rs  fee_history.rs  log.rs  mod.in.rs  mod.rs  node.rs  parity_peers.rs  parity_pending_transaction.rs  peer.rs  proof.rs  raw_transaction.rs  recovery.rs  signed.rs  signed_data.rs  sync_state.rs  trace_filtering.rs  traces.rs  transaction.rs  transaction_id.rs  transaction_request.rs  txpool.rs  uint.rs  work.rs
src/web3/: confirm.rs.html  error.rs.html  helpers.rs.html  lib.rs.html  signing.rs.html
src/web3/api/: accounts.rs.html  eth.rs.html  eth_filter.rs.html  eth_subscribe.rs.html  mod.rs.html  net.rs.html  parity.rs.html  parity_accounts.rs.html  parity_set.rs.html  personal.rs.html  traces.rs.html  txpool.rs.html  web3.rs.html
src/web3/contract/: deploy.rs.html  error.rs.html  mod.rs.html  tokens.rs.html
src/web3/transports/: batch.rs.html  either.rs.html  http.rs.html  mod.rs.html  ws.rs.html
src/web3/types/: block.rs.html  bytes.rs.html  log.rs.html  (+14 more)
tests/: README.md  web.rs
web3/: Cargo.toml  all.html  deny.toml  fn.block_on.html  fn.block_on_stream.html  index.html  sidebar-items.js  trait.BatchTransport.html  trait.DuplexTransport.html  trait.Transport.html  type.RequestId.html
web3/api/: index.html  sidebar-items.js  struct.Accounts.html  struct.BaseFilter.html  struct.Eth.html  struct.EthFilter.html  struct.EthSubscribe.html  struct.Net.html  struct.Parity.html  struct.ParityAccounts.html  struct.ParitySet.html  struct.Personal.html  struct.SubscriptionId.html  struct.SubscriptionStream.html  struct.Traces.html  struct.Txpool.html  struct.Web3.html  struct.Web3Api.html  trait.Namespace.html
web3/confirm/: fn.send_raw_transaction_with_confirmation.html  fn.send_transaction_with_confirmation.html  fn.wait_for_confirmations.html  index.html  sidebar-items.js  trait.ConfirmationCheck.html
web3/contract/: enum.Error.html  index.html  sidebar-items.js  struct.Contract.html  struct.Options.html  type.Result.html
web3/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
web3/examples/: contract.rs  contract_storage.rs  pubsub.rs  transport_batch.rs
web3/helpers/: fn.build_request.html  fn.decode.html  fn.serialize.html  fn.to_notification_from_slice.html  fn.to_response_from_slice.html  fn.to_result_from_output.html  fn.to_results_from_outputs.html  fn.to_string.html  index.html  sidebar-items.js  struct.CallFuture.html
web3/signing/: enum.RecoveryError.html  enum.SigningError.html  fn.keccak256.html  fn.recover.html  index.html  sidebar-items.js  struct.SecretKeyRef.html  struct.Signature.html  trait.Key.html
web3/src/: helpers.rs
web3/transports/: index.html  sidebar-items.js
web3/types/: enum.Action.html  enum.ActionType.html  enum.BlockId.html  enum.BlockNumber.html  enum.CallType.html  enum.Diff.html  enum.RecoveryMessage.html  enum.Res.html  enum.RewardType.html  enum.SyncState.html  enum.TraceType.html  enum.TransactionCondition.html  enum.TransactionId.html  index.html  sidebar-items.js  struct.AccountDiff.html  struct.Block.html  struct.BlockHeader.html  struct.BlockTrace.html  struct.Bytes.html  struct.BytesArray.html  struct.Call.html  struct.CallRequest.html  struct.CallResult.html  struct.ChangedType.html  struct.Create.html  struct.CreateResult.html  struct.EthProtocolInfo.html  struct.Filter.html  struct.FilterBuilder.html  struct.H128.html  struct.H160.html  struct.H2048.html  struct.H256.html  struct.H512.html  struct.H520.html  struct.H64.html  struct.Log.html  struct.MemoryDiff.html  struct.ParityPeerInfo.html  (+33 more)
(+150 files in other folders)
